--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,17 +1,38 @@
-/**
- * START --- TAILWIND GENERATOR EDIT
- *
- * `yarn rw setup tailwind` placed these imports here
- * to inject Tailwind's styles into your CSS.
- * For more information, see: https://tailwindcss.com/docs/installation#add-tailwind-to-your-css
- */
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
-/**
- * END --- TAILWIND GENERATOR EDIT
- */
+@import url("https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i,600,700,700i&display=swap");
 
-body {
-  @apply bg-black;
+@layer base {
+  * {
+    font-family: "Josefin Sans", sans-serif;
+    @apply box-border;
+  }
+
+  html,
+  body {
+    scroll-behavior: smooth;
+  }
+
+  html {
+    height: 100%;
+  }
+
+  body{
+    @apply h-full bg-gradient-to-tl from-gray-800 via-gray-900 to-black;
+  }
+
+  #redwood-app {
+    height: 100%;
+  }
+
+  .logo:hover {
+    text-shadow:
+                0 5px 5px #283618,
+                0 -5px 5px #283618;
+  }
+
+  .gallows {
+    font-family: monospace;
+  }
 }
